--- a/css/speedtext.css
+++ b/css/speedtext.css
@@ -1,12 +1,21 @@
 a{
-    color: #00f;
+    color: #4c4;
     cursor: pointer;
     text-decoration: underline;
+}
+a:hover{
+    color: #777;
+}
+body{
+    background: #000;
+    color: #aaa;
 }
 div{
     display: inline-block;
 }
 input{
+    background: #000;
+    color: #aaa;
     width: 75px;
 }
 input[type=button]{
