--- a/css/speedtext.css
+++ b/css/speedtext.css
@@ -9,9 +9,13 @@ a:hover{
 body{
     background: #000;
     color: #aaa;
+    font-family: sans-serif;
 }
 div{
     display: inline-block;
+}
+hr{
+    border: 2px solid #333;
 }
 input{
     background: #000;
